--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
     <main class="section main">
@@ -67,35 +68,35 @@
             </ul>
         </section>
     </main>
-    <section class="section">
-        <p>
-            This is an inspiring quote, or a testimonal from
-            a customer. Maybe it's just filling up space, or maybe people will 
-            actually read it. Who knows? All I know is that it looks nice.
-        </p>
-        <p>
-            -Thor, God of Thunder
-        </p>
-    </section>
-    <section class="section">
+    <section class="section-3">
+        <div class="section-quote">
+            <p class="quote">
+                This is an inspiring quote, or a testimonal from
+                a customer. Maybe it's just filling up space, or maybe people will 
+                actually read it. Who knows? All I know is that it looks nice.
+            </p>
+            <p class="quote-by">
+                -Thor, God of Thunder
+            </p>
+        </div>
         <div>
-            <div>
-                <div>
-                    <p>
+            <div class="call-action-container">
+                <div class="call-action-text">
+                    <p class="call-action-text-head">
                         Call to action! It's time!
                     </p>
                     <p>
                         Sign up for product by clicking that button right over there!
                     </p>
                 </div>
-                <button>
+                <button class="btn-action-signup">
                     Sign up
                 </button>
             </div>
         </div>
-        <div>
+        <footer class="footer">
             Copyright © The Odin Project 2021
-        </div>
+        </footer>
     </section>
 </body>
 </html>
